--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 anyio==3.6.1
+asyncpg==0.26.0
 bcrypt==4.0.0
 cffi==1.15.1
 click==8.1.3
 cryptography==38.0.1
+dnspython==2.2.1
 ecdsa==0.18.0
+email-validator==1.3.0
 fastapi==0.85.0
 greenlet==1.1.3
 h11==0.13.0
@@ -15,6 +18,7 @@ pycparser==2.21
 pydantic==1.10.2
 python-dotenv==0.21.0
 python-jose==3.3.0
+python-multipart==0.0.5
 pytz==2022.2.1
 PyYAML==6.0
 rsa==4.9
